--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
     <div class="container">
         <div class="wrapper">
-            <header class="title"></header>
+            <header class="title">Are you a Psychic?</header>
 
             <section>
+                <img src="assets/images/psychicteller.jpg" height="450" width="520">
                 <div id="gameBox">
                     <div id="wins"></div>
                     <div id="losses"></div>
