Css style changes, Added 'Orea Orb' - needs fixing

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <div class="container">
         <div class="wrapper">
-            <header class="title">Are you a Psychic?</header>
+            <header class="title">Ms Fortune-Cookies psychic readings</header>
 
             <section>
-                <img src="assets/images/psychicteller.jpg" height="450" width="520">
+                <img src="assets/images/psychicteller.jpg" height="500" width="600">
                 <div id="gameBox">
                     <div id="wins"></div>
                     <div id="losses"></div>
@@ -25,6 +25,10 @@
                 </div>
             </section>
         </div>
+    </div>
+
+    <div class="ball">
+        <p>oreo Orb</p>
     </div>
 
     <script></script> 
