Neon sign changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css"  />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
+    
     <script src="./assets/javascript/logic.js"></script>
 </head>
 <body>
@@ -16,9 +17,9 @@
             <header class="title">Ms Fortune-Cookies psychic readings</header>
 
             <section>
-                <img src="assets/images/psychicteller.jpg" height="500" width="500">
+                <img src="assets/images/psychicteller.jpg" height="350" width="400">
                 <div id="gameBox">
-                        <div class="ball">
+                        <div class="crystalball">
                     <div id="wins"></div>
                     <div id="losses"></div>
                     <div id="guesses"></div>
